--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -45,6 +45,9 @@
     <string name="user_id">
         User ID
     </string>
+    <string name="quick_view_text">
+        Quick view
+    </string>
     <string name="vertical_separator">
         |
     </string>
