US9192 - Added the FDIC disclaimer to the login in activity.

--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -345,13 +345,18 @@
                     </LinearLayout>
                 </RelativeLayout>
             </RelativeLayout>
-
-            <View
-                android:id="@+id/padding_element_bottom"
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/groups_of_elements_padding"
-                android:layout_below="@+id/login_table"
-                android:visibility="invisible" />
+            
+			<TextView 
+			    android:id="@+id/fdic_disclaimer_view"
+			    android:layout_width="wrap_content"
+			    android:layout_height="match_parent"
+			    android:layout_centerHorizontal="true"
+			    android:paddingBottom="@dimen/forms_inner_padding"
+			    android:layout_below="@+id/login_table"
+			    android:text="@string/fdic_disclaimer_string"
+			    android:textColor="@color/fdic_disclaimer_text_color"
+			    android:textSize="@dimen/fdic_disclaimer_text_size" />
+			
         </RelativeLayout>
     </com.discover.mobile.common.ui.widgets.NonFocusingScrollView>
 
