--- a/Discover-Commons/res/values/color.xml
+++ b/Discover-Commons/res/values/color.xml
@@ -43,6 +43,7 @@
 	<color name="strong_indicator">#8ed402</color>
 	<color name="blue_link">#0267b1</color>
 	<color name="green_acceptance">#4ba90a</color>
+	<color name="fdic_disclaimer_text_color">#F48B4C</color>
 	
 	<!-- Discover Secondary Colors Darker -->
 	<color name="strong_indicator_dark">#8ed402</color>
