US9192 - 	Added the FDIC disclaimer to the login in activity.

--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -48,6 +48,7 @@
     <string name="quick_view_text">
         Quick view
     </string>
+    <string name="fdic_disclaimer_string">\@2013 Discover Bank, Member FDIC</string>
     <string name="vertical_separator">
         |
     </string>
