--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -25,11 +25,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true" />
 
-    <com.discover.mobile.common.help.HelpWidget
+    <ImageButton
         android:id="@+id/help"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
+        style="@style/orange_help_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
     <!-- Layout Displays Google's Terms of Use -->
 
     <include layout="@layout/google_terms_of_use_layout" />
