--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -4,22 +4,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/light_gray_bkgrd" >
 
-
     <FrameLayout
         android:id="@+id/discover_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true" />
 
     <FrameLayout
         android:id="@+id/discover_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
-        android:layout_below="@+id/full_search_bar"/>
-
+        android:layout_below="@+id/full_search_bar" />
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
@@ -28,21 +26,22 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true" />
 
- 	<com.discover.mobile.common.help.HelpWidget
+    <ImageButton
         android:id="@+id/help"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" /> 
-    
- 	 <!-- Layout Displays Google's Terms of Use -->
-	<include layout="@layout/google_terms_of_use_layout" />
-	
+        style="@style/orange_help_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
+    <!-- Layout Displays Google's Terms of Use -->
+
+    <include layout="@layout/google_terms_of_use_layout" />
+
     <ImageView
         android:id="@+id/drop_shadow"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_above="@+id/map_navigation_panel"
         android:background="@drawable/atm_search_dropshadow" />
-     
+
     <LinearLayout
         android:id="@+id/map_navigation_panel"
         android:layout_width="match_parent"
