--- a/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
@@ -8,17 +8,17 @@
         android:id="@+id/discover_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/full_search_bar"
         android:layout_above="@+id/drop_shadow"
-        android:layout_alignParentBottom="true" 
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/full_search_bar" />
 
     <FrameLayout
         android:id="@+id/discover_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
-        android:layout_below="@+id/full_search_bar"/>
+        android:layout_below="@+id/full_search_bar" />
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
@@ -27,14 +27,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true" />
 
-    <com.discover.mobile.common.help.HelpWidget
+    <ImageButton
         android:id="@+id/help"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        style="@style/orange_help_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
 
     <!-- Layout Displays Google's Terms of Use -->
-	<include layout="@layout/google_terms_of_use_layout" />
-    
+
+    <include layout="@layout/google_terms_of_use_layout" />
+
     <ImageView
         android:id="@+id/drop_shadow"
         android:layout_width="match_parent"
