DE6038:  Made it so the radio button is clickable on the reoccurring date view.

--- a/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
@@ -97,7 +97,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_weight=".5"
-            android:button="@drawable/make_payment_radio_button" />
+            android:button="@drawable/make_payment_radio_button"
+            android:clickable="false"  />
 
         <LinearLayout
             android:id="@+id/inner_date_layout"
