US7225 - 13.3 - 06/13/2013 Clearcase Merge - Discover-Launch Project

--- a/Discover-Launch/assets/www/css/pnMain-R5.css
+++ b/Discover-Launch/assets/www/css/pnMain-R5.css
@@ -1536,8 +1536,8 @@ color: #576166;
 
 .boldtext{font-weight:bold !important;}
 
-#specialNotes{ 
-    clear:both; 
+#specialNotes,#alertHistory-pg .main_heading_paragraph{ 
+  /*  clear:both; */
     font-size:14px; 
     color:#474e55; 
 }
