--- a/Discover-Card-Phone/res/layout/fastcheck_display_reward_list_item.xml
+++ b/Discover-Card-Phone/res/layout/fastcheck_display_reward_list_item.xml
@@ -9,7 +9,8 @@
 	    android:id="@+id/error_img"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:src="@drawable/error_img"/>
+	    android:src="@drawable/error_img"
+	    android:contentDescription="@string/fast_check_error_img_desc"/>
     
     <TextView
         android:id="@+id/balance_label"
@@ -24,15 +25,14 @@
 		style="@style/title_copy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/balance_label"
-        android:layout_below="@+id/balance_label"
-        android:layout_toLeftOf="@+id/action_text"/>
+        android:layout_alignLeft="@id/balance_label"
+        android:layout_below="@id/balance_label"/>
     
     <LinearLayout 
         android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"
-        android:layout_alignBottom="@+id/balance_value"
+        android:layout_alignBottom="@id/balance_value"
 	    android:orientation="horizontal"
 	    android:gravity="bottom">
 	        
