--- a/Discover-Card-Phone/res/layout/fastcheck_fragment.xml
+++ b/Discover-Card-Phone/res/layout/fastcheck_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -17,7 +17,8 @@
             style="@style/default_list_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:layout_marginBottom="18dp" />
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
