--- a/Discover-Bank-Phone/res/layout/faq_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/faq_list_item.xml
@@ -11,15 +11,18 @@
         android:background="@drawable/table_dotted_line" />
 
     <RelativeLayout
+        android:id="@+id/faq_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/divider" >
+        android:layout_below="@+id/divider"
+        android:padding="@dimen/between_related_elements_padding" >
 
         <TextView
             android:id="@+id/expand_indicator"
             style="@style/blue_hyperlink"
             android:layout_width="@dimen/groups_of_elements_padding"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/plus" />
 
@@ -30,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/expand_indicator"
             android:layout_toRightOf="@+id/expand_indicator"
+            android:clickable="false"
             android:text="@string/edit"
             android:textStyle="bold" />
 
@@ -41,6 +45,7 @@
             android:layout_alignLeft="@+id/faq_section_title"
             android:layout_below="@+id/faq_section_title"
             android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:clickable="false"
             android:text="@string/edit"
             android:visibility="gone" />
     </RelativeLayout>
