--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -20,6 +20,14 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:height">@dimen/login_bottom_button_height</item>
     </style>
+    
+    <style name="fastcheck_bottom_bar_button">
+        <item name="android:padding">@dimen/content_padding</item>
+        <item name="android:textSize">@dimen/small_copy_min</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:height">@dimen/login_bottom_button_height</item>
+         <item name="android:background">#00000000</item>
+    </style>
 
     <style name="simple_white_button">
         <item name="android:textColor">@color/sub_copy</item>
