US9500 - Android: QSYS Environment Build
Tested:
Verified builds in eclipse

--- a/Discover-Commons/res/values/env_net.xml
+++ b/Discover-Commons/res/values/env_net.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bank_base_url">https://asys.discoverbank.com</string>
     <string name="bank_stripped_url">http://asys.discoverbank.com</string>
