US7225 - 13.3 - 06/17/2013 Clearcase Merge - Discover-Common Project

--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -79,4 +79,7 @@
         Privacy &amp; Terms
     </string>
     
+	<!-- Fastcheck, aka QuickView -->
+	<string name="gotoFastcheckBtnText">Quick view</string>
+    
 </resources>
