--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -82,4 +82,7 @@
         Privacy &amp; Terms
     </string>
     
+	<!-- Fastcheck, aka QuickView -->
+	<string name="gotoFastcheckBtnText">Quick view</string>
+    
 </resources>
