--- a/Discover-Card-Phone/res/layout/whats_new_layout1.xml
+++ b/Discover-Card-Phone/res/layout/whats_new_layout1.xml
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/whats_new_content_description_label"
-            style="@style/small_copy"
+            style="@style/whatsnew_small_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/whats_new_view_liner"
@@ -48,7 +48,7 @@
 
         <TextView
             android:id="@+id/whats_new_label"
-            style="@style/small_copy"
+            style="@style/whatsnew_small_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/whats_new_content_description_label"
