--- a/Discover-Card-Phone/res/values/styles.xml
+++ b/Discover-Card-Phone/res/values/styles.xml
@@ -301,7 +301,7 @@
     <!-- FastView/QuickView -->
     <style name="quick_view_text">
         <item name="android:textColor">#3d484d</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
@@ -310,4 +310,9 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="whatsnew_small_copy" parent="discover_text">
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textColor">@color/whatsnew_desc</item>
+        <item name="android:textStyle">normal</item>                
+    </style>
 </resources>
