--- a/Discover-Bank-Phone/res/layout/fastcheck_frame.xml
+++ b/Discover-Bank-Phone/res/layout/fastcheck_frame.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.50"
-            android:text="@string/provide_feedback" />
+            android:text="@string/feedback_text" />
     </LinearLayout>
 
 </RelativeLayout>
