--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -66,9 +66,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/element_side_padding"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/quick_view_button"
-                    android:text="Quick view" />
+                    android:text="@string/gotoFastcheckBtnText" />
 
                 <TextView
                     android:id="@+id/error_text_view"
