--- a/Discover-Commons/res/values/styles_commons_action_buttons.xml
+++ b/Discover-Commons/res/values/styles_commons_action_buttons.xml
@@ -11,14 +11,23 @@
 	        <item name="android:layout_gravity">center_horizontal</item>
 	        <item name="android:textStyle">bold</item>
 	</style>
-	
+	<style name="common_call_to_action_gray_theme">
+	    <item name="android:textColor">@drawable/call_to_action_text_color</item>
+	        <item name="android:textSize">@dimen/small_copy_max</item>
+	       	<item name="android:background">@drawable/common_action_button_gray</item>
+	        <item name="android:paddingLeft">@dimen/small_orange_button_left_right_padding</item>
+	        <item name="android:paddingRight">@dimen/small_orange_button_left_right_padding</item>
+	        <item name="android:paddingTop">@dimen/small_call_to_actions_padding</item>
+	        <item name="android:paddingBottom">@dimen/small_call_to_actions_padding</item>
+	        <item name="android:layout_gravity">center_horizontal</item>
+	        <item name="android:textStyle">bold</item>
+	</style>
 	<style name="small_call_to_action_theme_commons">
 	        <item name="android:textColor">@drawable/call_to_action_text_color</item>
 	        <item name="android:textSize">@dimen/small_copy_max</item>
 	        <item name="android:paddingLeft">@dimen/small_orange_button_left_right_padding</item>
 	        <item name="android:paddingRight">@dimen/small_orange_button_left_right_padding</item>
-	        <item name="android:background">@dimen/commons_call_to_action_button</item>
-	        <item name="android:background">#ed4b0b</item>
+	        <item name="android:background">@drawable/commons_call_to_action_button</item>
 	        <item name="android:paddingTop">@dimen/small_call_to_actions_padding</item>
 	        <item name="android:paddingBottom">@dimen/small_call_to_actions_padding</item>
 	        <item name="android:layout_gravity">center_horizontal</item>
