DE6088 - Fixed an issue where the map fragment would flash black when it was animating into view. A simple fade in animation prevents this.

--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true" 
+        android:visibility="invisible"/>
 
     <FrameLayout
         android:id="@+id/discover_list"
