--- a/Discover-Commons/res/drawable/common_action_button_gray.xml
+++ b/Discover-Commons/res/drawable/common_action_button_gray.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:bottom="2dp" android:right="2dp">
         <shape>
-            <solid android:color="#D6D6D4"></solid>
+            <solid android:color="@color/action_button_gray"></solid>
         </shape>
     </item>
 </layer-list>
