--- a/Discover-Commons/res/drawable/common_action_button_gray_pressed.xml
+++ b/Discover-Commons/res/drawable/common_action_button_gray_pressed.xml
@@ -8,7 +8,7 @@
     </item>
 	<item android:bottom="2dp" android:right="2dp">
 	    <shape>
-	        <solid android:color="#a7abad"></solid>
+	        <solid android:color="@color/action_button_gray_pressed"></solid>
 	    </shape>
 	</item>
 </layer-list>
