--- a/Discover-Commons/res/drawable/orange_action_button.xml
+++ b/Discover-Commons/res/drawable/orange_action_button.xml
@@ -8,7 +8,7 @@
     
     <item android:bottom="2dp" android:right="2dp">
         <shape>
-            <solid android:color="#ed4b0b"/>
+            <solid android:color="@color/action_button_orange"/>
         </shape>
     </item>  
 </layer-list>
