US7225 - 13.3 - 06/18/2013 Clearcase Merge - Discover-Card

--- a/Discover-Card-Phone/res/values/strings_whats_new_content.xml
+++ b/Discover-Card-Phone/res/values/strings_whats_new_content.xml
@@ -13,7 +13,7 @@
     <string name="quickview_content_heading">Get quick view of your account</string>
     <string name="quickview_content_description_cbb">View your current balance,available credit and <i>Cashback Bonus</i> balance at anytime with just a quick tap or swipe of your finger.	
 	</string>
-	<string name="quickview_content_description_mi">View your current balance, available credit and <i>Miles</i> balance at anytime with just a quick tap or swipe of your finger.	
+	<string name="quickview_content_description_mi">View your current balance, available credit and Miles balance at anytime with just a quick tap or swipe of your finger.	
 	</string>
 	<string name="quickview_content_description_dbc_corp">View your current balance, available credit at anytime with just a quick tap or swipe of your finger.	
 	</string>
