US9558 - Text Fields - Assets, main style

--- a/Discover-Commons/res/values/color.xml
+++ b/Discover-Commons/res/values/color.xml
@@ -15,6 +15,7 @@
 	<color name="gray">#CCCCCC</color>
 	<color name="lightRed">#1fff0000</color>
 	<color name="lightBlue">#d0025D96</color>
+	<color name="opaque">#FF000000</color>
 	
     <!-- Old -->
     <color name="primary">#00A8BF</color>
