US7225 - 13.3 - 06/19/2013 Clearcase Merge - Discover-Bank Project

--- a/Discover-Bank-Phone/res/layout/fastcheck_frame.xml
+++ b/Discover-Bank-Phone/res/layout/fastcheck_frame.xml
@@ -9,7 +9,10 @@
         android:name="com.discover.mobile.card.fastcheck.FastcheckFragment"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" 
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginTop="18dp"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/fastcheck_bottom_button_row"/> 
             
     <LinearLayout
